# sloth-cmake

./: CMakeLists.txt  README.md  SlothConfig.cmake.in
Modules/: Sloth.cmake  SlothAddTarget.cmake  SlothConfigure.cmake  SlothDoxygen.cmake  SlothDump.cmake  SlothImport.cmake  SlothPackage.cmake  SlothParseArguments.cmake  SlothRemote.cmake  SlothTools.cmake
Resources/: SlothRemoteGit.cmake.in
src/: Sloth.cmake  SlothAddTarget.cmake  SlothConfigure.cmake  SlothPackage.cmake  SlothTools.cmake
